feat: refactor organization roles and remove owner